Add enemy drop routing and unify route waypoints
Introduces support for routing to both loot areas and enemy spawn points by adding a unified Waypoint type to frontend and backend. Updates PlannerResponse to return a path of Waypoints, modifies frontend components to visualize mixed routes, and extends backend models and DTOs to support enemy drop data. Also adds migration for item_dropped_by, refactors routing logic, and improves Metaforge sync for enemy drop info.