@@ -6,6 +6,7 @@ import com.pauloneill.arcraidersplanner.dto.AreaDto;
 import com.pauloneill.arcraidersplanner.dto.EnemySpawnDto;
 import com.pauloneill.arcraidersplanner.dto.PlannerRequestDto;
 import com.pauloneill.arcraidersplanner.dto.PlannerResponseDto;
+import com.pauloneill.arcraidersplanner.dto.WaypointDto;
 import com.pauloneill.arcraidersplanner.model.*;
 import com.pauloneill.arcraidersplanner.repository.GameMapRepository;
 import com.pauloneill.arcraidersplanner.repository.ItemRepository;
@@ -36,18 +37,30 @@ public class PlannerService {
     }
 
     public List<PlannerResponseDto> generateRoute(PlannerRequestDto request) {
-        // Map LootType Name -> List of Target Item Names
-        Map<String, List<String>> targetLootMap = resolveOngoingItems(request.targetItemNames());
-        Set<String> requiredLootTypes = targetLootMap.keySet();
+        // Step 1: Resolve target item information (loot types and dropped-by enemies)
+        TargetItemInfo targetItemInfo = resolveTargetItemInformation(request.targetItemNames());
 
-        // Get all spawns of target enemy types if specified
+        Set<String> requiredLootTypes = targetItemInfo.targetLootTypes();
+        Set<String> targetDroppedByEnemies = targetItemInfo.targetDroppedByEnemies();
+        Map<String, List<String>> lootTypeToItemNames = targetItemInfo.lootTypeToItemNames();
+        Map<String, List<String>> enemyTypeToItemNames = targetItemInfo.enemyTypeToItemNames();
+
+        // Step 2: Combine explicitly requested enemy types with those derived from item drops
+        Set<String> allTargetEnemyTypes = new HashSet<>();
+        if (request.targetEnemyTypes() != null) {
+            allTargetEnemyTypes.addAll(request.targetEnemyTypes());
+        }
+        allTargetEnemyTypes.addAll(targetDroppedByEnemies);
+
+        // Step 3: Get all spawns of target enemy types
         List<MapMarker> allEnemySpawns = Collections.emptyList();
-        if (request.targetEnemyTypes() != null && !request.targetEnemyTypes().isEmpty()) {
-            allEnemySpawns = enemyService.getSpawnsByTypes(request.targetEnemyTypes());
+        if (!allTargetEnemyTypes.isEmpty()) {
+            allEnemySpawns = enemyService.getSpawnsByTypes(new ArrayList<>(allTargetEnemyTypes));
         }
 
         // Require either items OR enemies to be specified
-        if (requiredLootTypes.isEmpty() && allEnemySpawns.isEmpty()) {
+        if (requiredLootTypes.isEmpty() && allTargetEnemyTypes.isEmpty()) {
+            log.warn("No loot types or enemy types specified for route generation.");
             return Collections.emptyList();
         }
 
@@ -55,20 +68,32 @@ public class PlannerService {
         List<PlannerResponseDto> results = new ArrayList<>();
 
         for (GameMap map : maps) {
-            // 1. Identify Relevant Areas
-            List<Area> relevantAreas = map.getAreas().stream()
-                    .filter(area -> area.getLootTypes().stream()
-                            .anyMatch(lt -> requiredLootTypes.contains(lt.getName())))
-                    .collect(Collectors.toList());
-
-            // 2. Filter enemy spawns for this map
+            // Filter enemy spawns for this map
             List<MapMarker> enemySpawnsOnMap = allEnemySpawns.stream()
                     .filter(e -> e.getGameMap().getId().equals(map.getId()))
                     .toList();
 
-            // Skip map if it has no relevant areas AND no target enemy spawns
-            if (relevantAreas.isEmpty() && enemySpawnsOnMap.isEmpty())
+            // 1. Identify Relevant Areas (from requested loot types)
+            List<Area> relevantLootAreas = map.getAreas().stream()
+                    .filter(area -> area.getLootTypes().stream()
+                            .anyMatch(lt -> requiredLootTypes.contains(lt.getName())))
+                    .toList();
+
+            // 2. Identify Exclusive Enemy Drop Markers (items ONLY dropped by enemy, no loot area)
+            List<MapMarker> exclusiveEnemyMarkers = enemySpawnsOnMap.stream()
+                    .filter(marker -> targetItemInfo.exclusiveDroppedByEnemies().contains(marker.getSubcategory()))
+                    .toList();
+
+            // Combine relevant areas and exclusive enemy markers into the list of viable points for routing
+            List<RoutablePoint> viablePoints = new ArrayList<>();
+            viablePoints.addAll(relevantLootAreas);
+            viablePoints.addAll(exclusiveEnemyMarkers);
+
+            // Skip map if it has no viable points
+            if (viablePoints.isEmpty()) {
+                log.debug("Map {} has no relevant areas or exclusive enemy markers for target items.", map.getName());
                 continue;
+            }
 
             // 3. Identify "Danger Zones" (High Tier Areas) for PvP modes
             List<Area> dangerZones = map.getAreas().stream()
@@ -76,18 +101,14 @@ public class PlannerService {
                     .toList();
 
             // 4. Identify Extraction Points
-            // Premium extraction: Raider Hatches (requires key + specific profiles)
-            // Generic extraction: Standard extraction markers (always available)
             List<MapMarker> extractionMarkers;
             if (request.hasRaiderKey() && (request.routingProfile() == PlannerRequestDto.RoutingProfile.EASY_EXFIL
                     || request.routingProfile() == PlannerRequestDto.RoutingProfile.SAFE_EXFIL)) {
-                // Premium mode: Use Raider Hatches
                 extractionMarkers = mapMarkerRepository.findByGameMapId(map.getId()).stream()
                         .filter(m -> "hatch".equalsIgnoreCase(m.getSubcategory()))
                         .toList();
                 log.debug("Using Raider Hatches: found {} hatches for map {}", extractionMarkers.size(), map.getName());
             } else {
-                // Standard mode: Use generic extraction markers
                 extractionMarkers = mapMarkerRepository.findByGameMapId(map.getId()).stream()
                         .filter(m -> "extraction".equalsIgnoreCase(m.getSubcategory()))
                         .toList();
@@ -96,8 +117,15 @@ public class PlannerService {
             }
 
             // 5. Calculate Score based on Profile (including enemy proximity)
-            RouteResult route = calculateRouteAndScore(relevantAreas, requiredLootTypes, request.routingProfile(),
-                    dangerZones, extractionMarkers, enemySpawnsOnMap, map);
+            RouteResult route = calculateRouteAndScore(
+                    viablePoints, // Use combined list of routable points
+                    relevantLootAreas, // For score calculation for areas
+                    requiredLootTypes,
+                    request.routingProfile(),
+                    dangerZones,
+                    extractionMarkers,
+                    enemySpawnsOnMap, // All enemies for proximity scoring
+                    map);
 
             // Resolve Ongoing Items Map: LootType Name -> List of Item Names
             Map<String, List<String>> ongoingLootMap = resolveOngoingItems(request.ongoingItemNames());
@@ -105,15 +133,15 @@ public class PlannerService {
             PlannerResponseDto response = new PlannerResponseDto(
                     map.getId(),
                     map.getName(),
-                    route.score,
-                    route.path.stream().map(area -> convertToAreaDto(area, ongoingLootMap, targetLootMap)).toList(),
-                    route.extractionPoint,
-                    route.extractionLat,
-                    route.extractionLng,
-                    route.enemySpawns // Already converted to EnemySpawnDto in RouteResult
+                    route.score(),
+                    route.path().stream().map(point -> convertToWaypointDto(point, ongoingLootMap, lootTypeToItemNames, enemyTypeToItemNames)).toList(),
+                    route.extractionPoint(),
+                    route.extractionLat(),
+                    route.extractionLng(),
+                    route.enemySpawns()
             );
-            log.debug("Route for {}: extraction={}, coords=[{}, {}]", map.getName(), route.extractionPoint,
-                    route.extractionLat, route.extractionLng);
+            log.debug("Route for {}: extraction={}, coords=[{}, {}]", map.getName(), route.extractionPoint(),
+                    route.extractionLat(), route.extractionLng());
             results.add(response);
         }
 
@@ -121,51 +149,102 @@ public class PlannerService {
         return results;
     }
 
-    private record RouteResult(double score, List<Area> path, String extractionPoint, Double extractionLat,
+    private record TargetItemInfo(
+            Set<String> targetLootTypes,
+            Set<String> targetDroppedByEnemies,
+            Set<String> exclusiveDroppedByEnemies, // Enemies that ONLY drop item, no loot area
+            Map<String, List<String>> lootTypeToItemNames,
+            Map<String, List<String>> enemyTypeToItemNames
+    ) {}
+
+    private TargetItemInfo resolveTargetItemInformation(List<String> itemNames) {
+        Set<String> targetLootTypes = new HashSet<>();
+        Set<String> targetDroppedByEnemies = new HashSet<>();
+        Set<String> exclusiveDroppedByEnemies = new HashSet<>();
+        Map<String, List<String>> lootTypeToItemNames = new HashMap<>();
+        Map<String, List<String>> enemyTypeToItemNames = new HashMap<>();
+
+        if (itemNames != null && !itemNames.isEmpty()) {
+            for (String name : itemNames) {
+                itemRepository.findByName(name)
+                        .ifPresent(item -> {
+                            boolean hasLootType = item.getLootType() != null;
+                            boolean hasDroppedBy = item.getDroppedBy() != null && !item.getDroppedBy().isEmpty();
+
+                            if (hasLootType) {
+                                targetLootTypes.add(item.getLootType().getName());
+                                lootTypeToItemNames.computeIfAbsent(item.getLootType().getName(), k -> new ArrayList<>()).add(name);
+                            }
+                            if (hasDroppedBy) {
+                                targetDroppedByEnemies.addAll(item.getDroppedBy());
+                                item.getDroppedBy().forEach(enemyType ->
+                                        enemyTypeToItemNames.computeIfAbsent(enemyType, k -> new ArrayList<>()).add(name));
+
+                                if (!hasLootType) { // If item ONLY drops from enemy
+                                    exclusiveDroppedByEnemies.addAll(item.getDroppedBy());
+                                }
+                            }
+                        });
+            }
+        }
+        return new TargetItemInfo(targetLootTypes, targetDroppedByEnemies, exclusiveDroppedByEnemies, lootTypeToItemNames, enemyTypeToItemNames);
+    }
+
+    private record RouteResult(double score, List<? extends RoutablePoint> path, String extractionPoint, Double extractionLat,
             Double extractionLng, List<EnemySpawnDto> enemySpawns) {
     }
 
     private RouteResult calculateRouteAndScore(
-            List<Area> areas,
+            List<? extends RoutablePoint> viablePoints, // The actual points to route between (Areas and Exclusive Enemy Markers)
+            List<Area> relevantLootAreas, // Only for score calculation for areas
             Set<String> targets,
             PlannerRequestDto.RoutingProfile profile,
             List<Area> dangerZones,
             List<MapMarker> extractionMarkers,
-            List<MapMarker> targetEnemies,
+            List<MapMarker> allTargetEnemiesOnMap, // All enemies for proximity scoring
             GameMap map) {
+
         // --- MODE 1: PURE SCAVENGER ---
         // Logic: Simple count of matching areas. Distance is irrelevant.
         if (profile == PlannerRequestDto.RoutingProfile.PURE_SCAVENGER) {
-            List<EnemySpawnDto> enemySpawnDtos = convertToEnemySpawnDtos(targetEnemies, areas);
-            return new RouteResult(areas.size() * 100.0, areas, null, null, null, enemySpawnDtos);
+            List<EnemySpawnDto> enemySpawnDtos = convertToEnemySpawnDtos(allTargetEnemiesOnMap, viablePoints);
+            // In PURE_SCAVENGER, we return all viablePoints (Area or Marker)
+            return new RouteResult(viablePoints.size() * 100.0, viablePoints, null, null, null, enemySpawnDtos);
         }
 
         // --- BASE SCORING (Used for all other modes) ---
-        Map<Area, Double> areaScores = new HashMap<>();
-        for (Area area : areas) {
-            long matchCount = area.getLootTypes().stream().filter(lt -> targets.contains(lt.getName())).count();
-            double score = (matchCount > 1) ? (matchCount * 100) : 10;
+        Map<RoutablePoint, Double> pointScores = new HashMap<>();
+        for (RoutablePoint point : viablePoints) {
+            double score = 0.0;
+            if (point instanceof Area area) {
+                long matchCount = area.getLootTypes().stream().filter(lt -> targets.contains(lt.getName())).count();
+                score = (matchCount > 1) ? (matchCount * 100) : 10;
 
-            // PvP Mode Adjustment: Boost areas near map edge (distance from 0,0)
-            if (profile == PlannerRequestDto.RoutingProfile.AVOID_PVP
-                    || profile == PlannerRequestDto.RoutingProfile.SAFE_EXFIL) {
-                double distFromCenter = Math.sqrt(Math.pow(area.getMapX(), 2) + Math.pow(area.getMapY(), 2));
-                // Add 1 point for every 100 units away from center
-                score += (distFromCenter / 100.0);
+                // PvP Mode Adjustment: Boost areas near map edge (distance from 0,0)
+                if (profile == PlannerRequestDto.RoutingProfile.AVOID_PVP
+                        || profile == PlannerRequestDto.RoutingProfile.SAFE_EXFIL) {
+                    double distFromCenter = Math.sqrt(Math.pow(area.getX(), 2) + Math.pow(area.getY(), 2));
+                    // Add 1 point for every 100 units away from center
+                    score += (distFromCenter / 100.0);
 
-                // Penalize High Tier zones heavily in these modes
-                if (area.getLootAbundance() != null && area.getLootAbundance() == 1) {
-                    score -= 500;
+                    // Penalize High Tier zones heavily in these modes
+                    if (area.getLootAbundance() != null && area.getLootAbundance() == 1) {
+                        score -= 500;
+                    }
                 }
+            } else if (point instanceof MapMarker marker) {
+                // Scoring for exclusive enemy markers: give a base score for visiting
+                score = 75.0; // Base score for reaching an enemy target
             }
-            areaScores.put(area, score);
+            pointScores.put(point, score);
         }
 
-        // Filter out areas with negative scores (too dangerous)
-        List<Area> viableAreas = areas.stream().filter(a -> areaScores.get(a) > 0).toList();
-        if (viableAreas.isEmpty()) {
-            log.debug("No viable areas found - returning fallback extraction point if available");
-            List<EnemySpawnDto> emptySpawns = convertToEnemySpawnDtos(targetEnemies, Collections.emptyList());
+        // Filter out points with negative scores (too dangerous)
+        List<RoutablePoint> routablePointsForTSP = viablePoints.stream().filter(p -> pointScores.get(p) > 0).collect(Collectors.toList());
+
+        if (routablePointsForTSP.isEmpty()) {
+            log.debug("No viable points found - returning fallback extraction point if available");
+            List<EnemySpawnDto> emptySpawns = convertToEnemySpawnDtos(allTargetEnemiesOnMap, Collections.emptyList());
 
             // Still calculate extraction point even with no route
             String bestExit = null;
@@ -175,7 +254,7 @@ public class PlannerService {
                 // Use ANY area from the map as reference
                 Set<Area> allMapAreas = map.getAreas();
                 if (!allMapAreas.isEmpty()) {
-                    Area referenceArea = allMapAreas.iterator().next();
+                    Area referenceArea = allMapAreas.iterator().next(); // Use an actual Area as reference
                     MapMarker nearestExtraction = extractionMarkers.stream()
                             .min(Comparator.comparingDouble(m -> distance(referenceArea, m)))
                             .orElse(null);
@@ -195,29 +274,31 @@ public class PlannerService {
         }
 
         // --- ROUTE GENERATION (Multi-Start Nearest Neighbor + 2-Opt) ---
-        List<Area> path = findOptimalRoute(viableAreas);
-        log.debug("Generated route with {} areas", path.size());
+        List<? extends RoutablePoint> path = findOptimalRoute(routablePointsForTSP);
+        log.debug("Generated route with {} points", path.size());
 
         // Calculate score for the optimized path
         double totalScore = 0;
         for (int i = 0; i < path.size(); i++) {
-            Area current = path.get(i);
-            totalScore += areaScores.get(current);
+            RoutablePoint current = path.get(i);
+            totalScore += pointScores.getOrDefault(current, 0.0);
 
-            // Check Safety for PvP Modes when transitioning to next area
+            // Check Safety for PvP Modes when transitioning to next point
             if (i < path.size() - 1) {
-                Area next = path.get(i + 1);
-                if (profile == PlannerRequestDto.RoutingProfile.AVOID_PVP
-                        || profile == PlannerRequestDto.RoutingProfile.SAFE_EXFIL) {
-                    if (isRouteDangerous(current, next, dangerZones)) {
-                        totalScore -= 200; // Heavy penalty for crossing a High Tier zone
+                RoutablePoint next = path.get(i + 1);
+                // Only check danger zones if both points are Areas
+                if (current instanceof Area areaCurrent && next instanceof Area areaNext) {
+                    if (profile == PlannerRequestDto.RoutingProfile.AVOID_PVP
+                            || profile == PlannerRequestDto.RoutingProfile.SAFE_EXFIL) {
+                        if (isRouteDangerous(areaCurrent, areaNext, dangerZones)) {
+                            totalScore -= 200; // Heavy penalty for crossing a High Tier zone
+                        }
                     }
                 }
             }
         }
 
         // --- EXTRACTION LOGIC ---
-        // Calculate nearest extraction point and apply scoring bonus for proximity
         String bestExit = null;
         Double extractionLat = null;
         Double extractionLng = null;
@@ -227,32 +308,25 @@ public class PlannerService {
         } else if (extractionMarkers.isEmpty()) {
             log.warn("Cannot calculate extraction point: no extraction markers available");
         } else {
-            Area current = path.get(path.size() - 1); // Last area for exfil calculation
-            final Area finalLootZone = current;
+            RoutablePoint finalRoutablePoint = path.get(path.size() - 1); // Last point for exfil calculation
             MapMarker nearestExtraction = extractionMarkers.stream()
-                    .min(Comparator.comparingDouble(m -> distance(finalLootZone, m)))
+                    .min(Comparator.comparingDouble(m -> distance(finalRoutablePoint, m)))
                     .orElse(null);
 
             if (nearestExtraction != null) {
-                double distToExit = distance(finalLootZone, nearestExtraction);
+                double distToExit = distance(finalRoutablePoint, nearestExtraction);
 
                 // Apply distance-based scoring bonus for extraction proximity
-                // Premium modes (EASY_EXFIL, SAFE_EXFIL) get stronger bonuses
                 if (profile == PlannerRequestDto.RoutingProfile.EASY_EXFIL
                         || profile == PlannerRequestDto.RoutingProfile.SAFE_EXFIL) {
-                    // Stronger bonus for extraction-focused modes: +50 points max
                     totalScore += Math.max(0, 50 - (distToExit / 10.0));
                 } else {
-                    // Modest bonus for other modes: +25 points max
                     totalScore += Math.max(0, 25 - (distToExit / 20.0));
                 }
 
-                // Use marker name if available, otherwise use generic label
                 bestExit = (nearestExtraction.getName() != null && !nearestExtraction.getName().isBlank())
                         ? nearestExtraction.getName()
                         : "Extraction Point";
-
-                // Store calibrated coordinates for frontend rendering
                 extractionLat = nearestExtraction.getLat();
                 extractionLng = nearestExtraction.getLng();
                 log.debug("Selected extraction: {} at [{}, {}], distance: {}", bestExit, extractionLat, extractionLng,
@@ -262,13 +336,13 @@ public class PlannerService {
 
         // --- ENEMY PROXIMITY SCORING ---
         // Bonus points if route naturally passes near target enemy spawn points
-        if (!targetEnemies.isEmpty()) {
-            double enemyScore = scoreEnemyProximity(path, targetEnemies);
+        if (!allTargetEnemiesOnMap.isEmpty()) {
+            double enemyScore = scoreEnemyProximity(path, allTargetEnemiesOnMap);
             totalScore += enemyScore;
         }
 
         // Convert enemy spawns to DTOs with proximity info
-        List<EnemySpawnDto> enemySpawnDtos = convertToEnemySpawnDtos(targetEnemies, path);
+        List<EnemySpawnDto> enemySpawnDtos = convertToEnemySpawnDtos(allTargetEnemiesOnMap, path);
 
         return new RouteResult(totalScore, path, bestExit, extractionLat, extractionLng, enemySpawnDtos);
     }
@@ -278,19 +352,19 @@ public class PlannerService {
     /**
      * Finds the optimal route using multi-start nearest-neighbor followed by 2-opt
      * improvement.
-     * Tries starting from each area and picks the route with minimum total
+     * Tries starting from each point and picks the route with minimum total
      * distance.
      */
-    private List<Area> findOptimalRoute(List<Area> areas) {
-        if (areas.size() <= 2)
-            return new ArrayList<>(areas);
+    private List<? extends RoutablePoint> findOptimalRoute(List<? extends RoutablePoint> points) {
+        if (points.size() <= 2)
+            return new ArrayList<>(points);
 
-        List<Area> bestRoute = null;
+        List<? extends RoutablePoint> bestRoute = null;
         double bestDistance = Double.MAX_VALUE;
 
-        // Try starting from each area
-        for (Area startArea : areas) {
-            List<Area> route = nearestNeighborRoute(startArea, areas);
+        // Try starting from each point
+        for (RoutablePoint startPoint : points) {
+            List<? extends RoutablePoint> route = nearestNeighborRoute(startPoint, points);
             double totalDistance = calculateTotalDistance(route);
 
             if (totalDistance < bestDistance) {
@@ -305,19 +379,19 @@ public class PlannerService {
 
     /**
      * Constructs a route using nearest-neighbor heuristic starting from a specific
-     * area.
+     * point.
      */
-    private List<Area> nearestNeighborRoute(Area start, List<Area> allAreas) {
-        List<Area> route = new ArrayList<>();
-        Set<Area> unvisited = new HashSet<>(allAreas);
+    private List<? extends RoutablePoint> nearestNeighborRoute(RoutablePoint start, List<? extends RoutablePoint> allPoints) {
+        List<RoutablePoint> route = new ArrayList<>();
+        Set<RoutablePoint> unvisited = new HashSet<>(allPoints);
 
-        Area current = start;
+        RoutablePoint current = start;
         route.add(current);
         unvisited.remove(current);
 
         while (!unvisited.isEmpty()) {
-            final Area from = current;
-            Area nearest = unvisited.stream()
+            final RoutablePoint from = current;
+            RoutablePoint nearest = unvisited.stream()
                     .min(Comparator.comparingDouble(a -> distance(from, a)))
                     .orElseThrow();
 
@@ -332,7 +406,7 @@ public class PlannerService {
     /**
      * Calculates total Euclidean distance for a route.
      */
-    private double calculateTotalDistance(List<Area> route) {
+    private double calculateTotalDistance(List<? extends RoutablePoint> route) {
         double total = 0;
         for (int i = 0; i < route.size() - 1; i++) {
             total += distance(route.get(i), route.get(i + 1));
@@ -346,11 +420,11 @@ public class PlannerService {
      * WHY: Ensures routes don't zigzag unnecessarily (e.g., A→B→C when A→C→B is
      * shorter)
      */
-    private List<Area> twoOptImprove(List<Area> route) {
+    private List<? extends RoutablePoint> twoOptImprove(List<? extends RoutablePoint> route) {
         if (route.size() < 3)
             return route;
 
-        List<Area> improved = new ArrayList<>(route);
+        List<RoutablePoint> improved = new ArrayList<>(route);
         boolean foundImprovement = true;
 
         while (foundImprovement) {
@@ -373,8 +447,8 @@ public class PlannerService {
                     // If swap reduces distance, reverse the segment
                     if (swappedDist < currentDist) {
                         // Reverse segment from (i+1) to j
-                        List<Area> newRoute = new ArrayList<>(improved.subList(0, i + 1));
-                        List<Area> reversed = new ArrayList<>(improved.subList(i + 1, j + 1));
+                        List<RoutablePoint> newRoute = new ArrayList<>(improved.subList(0, i + 1));
+                        List<RoutablePoint> reversed = new ArrayList<>(improved.subList(i + 1, j + 1));
                         Collections.reverse(reversed);
                         newRoute.addAll(reversed);
                         if (j + 1 < improved.size()) {
@@ -396,12 +470,11 @@ public class PlannerService {
 
     // --- HELPERS ---
 
-    private double distance(Area a, Area b) {
-        return Math.sqrt(Math.pow(a.getMapX() - b.getMapX(), 2) + Math.pow(a.getMapY() - b.getMapY(), 2));
-    }
-
-    private double distance(Area a, MapMarker m) {
-        return Math.sqrt(Math.pow(a.getMapX() - m.getLng(), 2) + Math.pow(a.getMapY() - m.getLat(), 2));
+    /**
+     * Calculates the Euclidean distance between two RoutablePoints.
+     */
+    private double distance(RoutablePoint p1, RoutablePoint p2) {
+        return Math.sqrt(Math.pow(p1.getX() - p2.getX(), 2) + Math.pow(p1.getY() - p2.getY(), 2));
     }
 
     /**
@@ -410,15 +483,15 @@ public class PlannerService {
      * area centroids
      *
      * @param enemy Enemy spawn marker
-     * @param path  Route path (list of areas)
+     * @param path  Route path (list of RoutablePoints)
      * @return Minimum distance from enemy to any point on the route path
      */
-    private double distanceToRoutePath(MapMarker enemy, List<Area> path) {
+    private double distanceToRoutePath(MapMarker enemy, List<? extends RoutablePoint> path) {
         if (path.isEmpty()) {
             return Double.MAX_VALUE;
         }
 
-        // If only one area, use point-to-point distance
+        // If only one point, use point-to-point distance
         if (path.size() == 1) {
             return distance(path.get(0), enemy);
         }
@@ -426,13 +499,13 @@ public class PlannerService {
         // Calculate minimum distance to all route segments
         double minDistance = Double.MAX_VALUE;
         for (int i = 0; i < path.size() - 1; i++) {
-            Area start = path.get(i);
-            Area end = path.get(i + 1);
+            RoutablePoint start = path.get(i);
+            RoutablePoint end = path.get(i + 1);
 
             double segmentDist = pointToSegmentDistance(
-                    enemy.getLng(), enemy.getLat(), // Point (enemy position)
-                    start.getMapX(), start.getMapY(), // Segment start
-                    end.getMapX(), end.getMapY() // Segment end
+                    enemy.getX(), enemy.getY(), // Point (enemy position)
+                    start.getX(), start.getY(), // Segment start
+                    end.getX(), end.getY() // Segment end
             );
 
             minDistance = Math.min(minDistance, segmentDist);
@@ -449,9 +522,9 @@ public class PlannerService {
 
             double dangerRadius = calculateDynamicRadius(danger);
             double distToHazard = pointToSegmentDistance(
-                    danger.getMapX(), danger.getMapY(),
-                    start.getMapX(), start.getMapY(),
-                    end.getMapX(), end.getMapY());
+                    danger.getX(), danger.getY(),
+                    start.getX(), start.getY(),
+                    end.getX(), end.getY());
 
             if (distToHazard < dangerRadius)
                 return true;
@@ -471,16 +544,11 @@ public class PlannerService {
             // Find max distance from center to any vertex
             double maxDist = 0;
             for (List<Double> point : coords) {
-                // Leaflet [lat, lng] -> API [y, x]. Our DB stores [lat(y), lng(x)] usually
-                // But based on V4 SQL, the JSON is [[x,y]...]
-                // We assume standard euclidean distance from centroid
-                double px = point.get(1); // SQL format often varies, check your migration!
                 // Based on V4: '[[462,-438]...]' -> Looks like [x, y]
-                double py = point.get(0);
+                double px = point.get(0);
+                double py = point.get(1);
 
-                // Actually, Leaflet is usually [Lat, Lng] -> [Y, X]
-                // The helper uses centroid mapX/mapY. Let's trust the max dist from centroid.
-                double d = Math.sqrt(Math.pow(area.getMapX() - px, 2) + Math.pow(area.getMapY() - py, 2));
+                double d = Math.sqrt(Math.pow(area.getX() - px, 2) + Math.pow(area.getY() - py, 2));
                 if (d > maxDist)
                     maxDist = d;
             }
@@ -510,11 +578,11 @@ public class PlannerService {
      * WHY: Routes that naturally pass enemies are more efficient for combined
      * loot+hunt missions
      *
-     * @param path    Route waypoints (loot areas)
+     * @param path    Route waypoints (RoutablePoints)
      * @param enemies Target enemy spawn markers
      * @return Proximity score bonus
      */
-    private double scoreEnemyProximity(List<Area> path, List<MapMarker> enemies) {
+    private double scoreEnemyProximity(List<? extends RoutablePoint> path, List<MapMarker> enemies) {
         double score = 0;
         final double PROXIMITY_THRESHOLD = 400.0; // Match the threshold used for onRoute detection
 
@@ -536,10 +604,10 @@ public class PlannerService {
      * the route
      *
      * @param enemies All enemy spawns of selected types on this map
-     * @param path    The optimized loot route
+     * @param path    The optimized loot route (List of RoutablePoints)
      * @return List of EnemySpawnDto with onRoute status and distances
      */
-    private List<EnemySpawnDto> convertToEnemySpawnDtos(List<MapMarker> enemies, List<Area> path) {
+    private List<EnemySpawnDto> convertToEnemySpawnDtos(List<MapMarker> enemies, List<? extends RoutablePoint> path) {
         if (enemies.isEmpty()) {
             return Collections.emptyList();
         }
@@ -570,50 +638,72 @@ public class PlannerService {
                 .toList();
     }
 
-    private AreaDto convertToAreaDto(Area area, Map<String, List<String>> ongoingLootMap, Map<String, List<String>> targetLootMap) {
-        AreaDto dto = new AreaDto();
-        dto.setId(area.getId());
-        dto.setName(area.getName());
-        dto.setMapX(area.getMapX());
-        dto.setMapY(area.getMapY());
-        dto.setCoordinates(area.getCoordinates());
-        dto.setLootAbundance(area.getLootAbundance());
-        
-        Set<String> areaLootTypes = new HashSet<>();
-        if (area.getLootTypes() != null) {
-            areaLootTypes = area.getLootTypes().stream().map(LootType::getName).collect(Collectors.toSet());
-            dto.setLootTypes(areaLootTypes);
-        } else {
-            dto.setLootTypes(Collections.emptySet());
-        }
+    /**
+     * Converts a RoutablePoint to a WaypointDto for API response.
+     * WHY: Provides a unified DTO for both Area and MapMarker points in the route.
+     */
+    private WaypointDto convertToWaypointDto(
+            RoutablePoint point,
+            Map<String, List<String>> ongoingLootMap,
+            Map<String, List<String>> targetLootTypeToItemNames,
+            Map<String, List<String>> targetEnemyTypeToItemNames) {
 
-        // Populate ongoingMatchItems
-        if (ongoingLootMap != null && !ongoingLootMap.isEmpty()) {
-            List<String> matches = new ArrayList<>();
-            for (String lootType : areaLootTypes) {
-                if (ongoingLootMap.containsKey(lootType)) {
-                    matches.addAll(ongoingLootMap.get(lootType));
+        String type;
+        Set<String> lootTypes = Collections.emptySet();
+        Integer lootAbundance = null;
+        List<String> ongoingMatchItems = Collections.emptyList();
+        List<String> targetMatchItems = new ArrayList<>();
+
+        if (point instanceof Area area) {
+            type = "AREA";
+            if (area.getLootTypes() != null) {
+                lootTypes = area.getLootTypes().stream().map(LootType::getName).collect(Collectors.toSet());
+            }
+            lootAbundance = area.getLootAbundance();
+
+            // Populate ongoingMatchItems for areas
+            if (ongoingLootMap != null && !ongoingLootMap.isEmpty()) {
+                List<String> matches = new ArrayList<>();
+                for (String lootType : lootTypes) {
+                    if (ongoingLootMap.containsKey(lootType)) {
+                        matches.addAll(ongoingLootMap.get(lootType));
+                    }
+                }
+                ongoingMatchItems = matches.stream().distinct().sorted().toList();
+            }
+
+            // Populate targetMatchItems for areas
+            if (targetLootTypeToItemNames != null && !targetLootTypeToItemNames.isEmpty()) {
+                for (String lootType : lootTypes) {
+                    if (targetLootTypeToItemNames.containsKey(lootType)) {
+                        targetMatchItems.addAll(targetLootTypeToItemNames.get(lootType));
+                    }
                 }
             }
-            dto.setOngoingMatchItems(matches.stream().distinct().sorted().toList());
-        } else {
-            dto.setOngoingMatchItems(Collections.emptyList());
-        }
 
-        // Populate targetMatchItems
-        if (targetLootMap != null && !targetLootMap.isEmpty()) {
-            List<String> matches = new ArrayList<>();
-            for (String lootType : areaLootTypes) {
-                if (targetLootMap.containsKey(lootType)) {
-                    matches.addAll(targetLootMap.get(lootType));
+        } else if (point instanceof MapMarker marker) {
+            type = "MARKER";
+            // Populate targetMatchItems for markers (enemies)
+            if (targetEnemyTypeToItemNames != null && !targetEnemyTypeToItemNames.isEmpty()) {
+                if (marker.getSubcategory() != null && targetEnemyTypeToItemNames.containsKey(marker.getSubcategory())) {
+                    targetMatchItems.addAll(targetEnemyTypeToItemNames.get(marker.getSubcategory()));
                 }
             }
-            dto.setTargetMatchItems(matches.stream().distinct().sorted().toList());
         } else {
-            dto.setTargetMatchItems(Collections.emptyList());
+            type = "UNKNOWN"; // Should not happen with proper type checking
         }
 
-        return dto;
+        return new WaypointDto(
+                point.getId(),
+                point.getName(),
+                point.getX(),
+                point.getY(),
+                type,
+                lootTypes,
+                lootAbundance,
+                ongoingMatchItems,
+                targetMatchItems.stream().distinct().sorted().toList()
+        );
     }
 
     private Map<String, List<String>> resolveOngoingItems(List<String> itemNames) {
